remove margin to prevent content jumps

--- a/resources/styles/exercises.less
+++ b/resources/styles/exercises.less
@@ -47,6 +47,9 @@ body {
     border-right: 1px solid @nav-tabs-border-color;
     border-bottom: 1px solid @nav-tabs-border-color;
   }
+  .navbar-form {
+    .navbar-btn { margin-top: 0; }
+  }
   @import './tags';
   @import './attachments';
   @import './question';
